@@ -37,7 +37,7 @@ final class RasterizedImageDataLoader implements ImageDataLoader {
   private final WeakReference<ClassLoader> originalClassLoaderRef;
 
   private final int imageFlags;
-  private boolean myPatched = false;
+  private boolean isPatched;
 
   RasterizedImageDataLoader(@NotNull String path,
                             @NotNull WeakReference<ClassLoader> classLoaderRef,
@@ -67,12 +67,8 @@ final class RasterizedImageDataLoader implements ImageDataLoader {
     String effectivePath = normalizePath(patched.first);
     WeakReference<ClassLoader> effectiveClassLoaderRef = patched.second == null ? originalClassLoaderRef : new WeakReference<>(patched.second);
     RasterizedImageDataLoader loader = new RasterizedImageDataLoader(effectivePath, effectiveClassLoaderRef, originalPath, originalClassLoaderRef, cacheKey, imageFlags);
-    loader.setPatched(true);
+    loader.isPatched = true;
     return loader;
-  }
-
-  private void setPatched(boolean patched) {
-    myPatched = patched;
   }
 
   @Override
@@ -88,7 +84,8 @@ final class RasterizedImageDataLoader implements ImageDataLoader {
     }
     boolean isSvg = cacheKey != 0;
     // use cache key only if path to image is not customized
-    return loadRasterized(path, filters, classLoader, flags, scaleContext, isSvg, originalPath == path ? cacheKey : 0, imageFlags, myPatched);
+    return loadRasterized(path, filters, classLoader, flags, scaleContext, isSvg, originalPath == path ? cacheKey : 0, imageFlags,
+                          isPatched);
   }
 
   @Override
@@ -185,18 +182,24 @@ final class RasterizedImageDataLoader implements ImageDataLoader {
       }
     }
 
-    List<Pair<String,Float>> effectivePaths;
+    List<Pair<String, Float>> effectivePaths;
     if (patched) {
-      Pair<String, Float> retinaDark = Pair.create(name + "@2x_dark." + ext, isSvg ? scale : 2);
-      Pair<String, Float> dark       = Pair.create(name + "_dark." + ext, isSvg ? scale : 1);
-      Pair<String, Float> retina     = Pair.create(name + "@2x." + ext, isSvg ? scale : 2);
-      Pair<String, Float> plain      = Pair.create(path, isSvg ? scale : 1);
-      effectivePaths = isRetina && isDark ? Arrays.asList(retinaDark, dark, retina, plain)
-                                          : isDark ? Arrays.asList(dark, plain)
-                                                   : isRetina ? Arrays.asList(retina, plain)
-                                                              : List.of(plain);
-    } else {
-      effectivePaths = List.of(Pair.create(effectivePath, imageScale));
+      Pair<String, Float> retinaDark = new Pair<>(name + "@2x_dark." + ext, isSvg ? scale : 2);
+      Pair<String, Float> dark = new Pair<>(name + "_dark." + ext, isSvg ? scale : 1);
+      Pair<String, Float> retina = new Pair<>(name + "@2x." + ext, isSvg ? scale : 2);
+      Pair<String, Float> plain = new Pair<>(path, isSvg ? scale : 1);
+      if (isRetina && isDark) {
+        effectivePaths = Arrays.asList(retinaDark, dark, retina, plain);
+      }
+      else if (isDark) {
+        effectivePaths = List.of(dark, plain);
+      }
+      else {
+        effectivePaths = isRetina ? List.of(retina, plain) : List.of(plain);
+      }
+    }
+    else {
+      effectivePaths = List.of(new Pair<>(effectivePath, imageScale));
     }
 
     ImageLoader.Dimension2DDouble originalUserSize = new ImageLoader.Dimension2DDouble(0, 0);
